0.4.4b Changelog: - Fix user note textarea not being visible.

--- a/src/Popouts/index.css
+++ b/src/Popouts/index.css
@@ -65,3 +65,8 @@
 .theme-dark .footer-31IekZ {
     background-color: var(--background-secondary);
 }
+
+/*Fixes*/
+.textarea-_59yqs[aria-label="Note"] {
+    display: unset;
+}
